--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="showcase" data-framework="typescript">
+<html lang="en" ng-app="app" data-framework="typescript">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +7,12 @@
   </head>
   <body>
     <ul class="menu">
-      <li><a href="#/first">first</a></li>
-      <li><a href="#/second">second</a></li>
+      <li><a href="#/home">home</a></li>
     </ul>
     <div ng-view></div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-mobile.js"></script>
-    <script src="js/all.js"></script>
+    <script src="app/bower_components/angular/angular.js"></script>
+    <script src="app/bower_components/angular-route/angular-route.js"></script>
+    <script src="app/app.js"></script>
   </body>
 </html>
